@@ -1,5 +1,7 @@
 Changelog for GitPackageManagement.
 
+- Allow Widget Elements
+- Fix setting description for TVs
 - Fix setting output properties for TVs
 
 GitPackageManagement 0.11.0 alpha
